-
Bug
-
Resolution: Fixed
-
P4
-
8-shenandoah, 11-shenandoah, 14, 15
-
b22
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8245362 | 14u-cpu | Aleksey Shipilev | P4 | Resolved | Fixed | master |
JDK-8244687 | 14.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b06 |
bash ./configure --with-boot-jdk=../jdk-14.0.1 --with-jtreg=<jtreg> --with-native-debug-symbols=external --with-debug-level=release --with-jvm-features=-jfr
make clean CONF=-r images
gives a couple of undefined references to ShenandoahHeap.cpp errors.
After fixing this, brief inspection of includes in cpp files show that in a few places only .hpp files are included even if there are .inline.hpp available, i.e. more include issues may be hidden with different build exclusions.
Patch to fix the immediate compilation errors attached.
make clean CONF=-r images
gives a couple of undefined references to ShenandoahHeap.cpp errors.
After fixing this, brief inspection of includes in cpp files show that in a few places only .hpp files are included even if there are .inline.hpp available, i.e. more include issues may be hidden with different build exclusions.
Patch to fix the immediate compilation errors attached.
- backported by
-
JDK-8244687 Shenandoah: build breakages after JDK-8241743
-
- Resolved
-
-
JDK-8245362 Shenandoah: build breakages after JDK-8241743
-
- Resolved
-
- relates to
-
JDK-8241743 Shenandoah: refactor and inline ShenandoahHeap::heap()
-
- Resolved
-