8244200: Shenandoah: build breakages after JDK-8241743

Reviewed-by: rkennke